attempt to fix blogsearch so it opens on mobile in the editor

--- a/less/widget-navigation.less
+++ b/less/widget-navigation.less
@@ -73,7 +73,7 @@
     opacity: 0;
     .transform(@x:0, @y:5px);
     .transition(@duration:1s, @ease:ease-in-out);
-    display: block;
+    display: inline-block;
     position: relative;
     cursor: pointer;
 
